crates/macro/tests/proc-macro-tests/export.stderr
error: cannot return a borrowed ref with #[holium_bindgen]
  --> $DIR/export.rs:56:25
   |
56 | pub fn bad1(a: &str) -> &String {
   |                         ^^^^^^^
